# xcipmaster

./: LICENSE  README.md  Requirements.txt  main.py  pyproject.toml
conf/: cip_xml_config.xml
tests/: _stubs.py  conftest.py  test_cli.py  test_comm.py  test_config_service.py  test_fields.py  test_network.py
xcipmaster/: __about__.py  __init__.py  comm.py  config.py  fields.py  network.py  paths.py
xcipmaster/cli/: __init__.py  commands.py  controller.py  ui.py  waveforms.py
xcipmaster/conf/: __init__.py
